Fix typos and add numerical implementation section

--- a/acros.tex
+++ b/acros.tex
@@ -161,6 +161,7 @@
 \newacronym{PDE}{PDE}{partial differential equation}
 \newacronym{PEI}{PEI}{Peak Environmental Impact}
 \newacronym{PH}{PRONGHORN}{PRONGHORN}
+\newacronym{PJFNK}{PJFNK}{preconditioned Jacobian-free Newton-Krylov}
 \newacronym{PoliMi}{PoliMi}{Politecnico di Milano}
 \newacronym{PRIS}{PRIS}{Power Reactor Information System}
 \newacronym{PRKE}{PRKE}{Point Reactor Kinetics Equations}
