--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3755,7 +3755,7 @@ INIS Reference Number: 8288836},
 	author = {Gross, Roy and Cufe, Johan and Tomatis, Daniele and Gilad, Erez},
 	month = feb,
 	year = {2023},
-	keywords = {Integral transport, Neutron diffusion, Non-linear transport correction, Ronen method, Sood benchmark},
+	keywords = {Ronen method, Integral transport, Neutron diffusion, Non-linear transport correction, Sood benchmark},
 	pages = {734--748},
 	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\DBDJDW45\\S1738573322004582.html:text/html},
 }
@@ -3774,7 +3774,7 @@ INIS Reference Number: 8288836},
 	year = {2024},
 	note = {Publisher: Taylor \& Francis
 \_eprint: https://doi.org/10.1080/00295639.2024.2333088},
-	keywords = {customized diffusion, equivalence, neutron transport, Ronen method},
+	keywords = {neutron transport, Ronen method, customized diffusion, equivalence},
 	pages = {1--20},
 	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\X22Q6CG3\\Cufe and Tomatis - 2024 - Study of the Accuracy of the Ronen Method at Mater.pdf:application/pdf},
 }
@@ -3794,4 +3794,36 @@ INIS Reference Number: 8288836},
 	keywords = {Communication avoiding algorithms, High-order/low-order, HOLO, Implicit timestepping, Multiscale algorithms},
 	pages = {21--45},
 	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\XTC82XDJ\\S0021999116305770.html:text/html},
+}
+
+@article{giudicelli_30_2024,
+	title = {3.0 - {MOOSE}: {Enabling} massively parallel multiphysics simulations},
+	volume = {26},
+	issn = {2352-7110},
+	shorttitle = {3.0 - {MOOSE}},
+	url = {https://www.sciencedirect.com/science/article/pii/S235271102400061X},
+	doi = {10.1016/j.softx.2024.101690},
+	abstract = {The development of MOOSE has kept accelerating since the last release, with over 2,100 pull requests merged over the last 30 months that involved nearly fifty contributors across close to a dozen institutions internationally. The growth in MOOSE's capabilities and downstream applications is reflected in the growth of the community. User support provided on the GitHub discussions forum has steadily increased to nearly 50 daily interactions. New simulation projects, notably to model advanced nuclear reactor and fusion devices, are driving a significant expansion of the capabilities. This paper reports on these developments, with several major released features, new physics modules, and key improvements to the user experience and simulation workflow.},
+	urldate = {2024-06-19},
+	journal = {SoftwareX},
+	author = {Giudicelli, Guillaume and Lindsay, Alexander and Harbour, Logan and Icenhour, Casey and Li, Mengnan and Hansel, Joshua E. and German, Peter and Behne, Patrick and Marin, Oana and Stogner, Roy H. and Miller, Jason M. and Schwen, Daniel and Wang, Yaqi and Munday, Lynn and Schunert, Sebastian and Spencer, Benjamin W. and Yushu, Dewen and Recuero, Antonio and Prince, Zachary M. and Nezdyur, Max and Hu, Tianchen and Miao, Yinbin and Jung, Yeon Sang and Matthews, Christopher and Novak, April and Langley, Brandon and Truster, Timothy and Nobre, Nuno and Alger, Brian and Andrs, David and Kong, Fande and Carlsen, Robert and Slaughter, Andrew E. and Peterson, John W. and Gaston, Derek and Permann, Cody},
+	month = may,
+	year = {2024},
+	keywords = {Finite-element, Finite-volume, Framework, Multiphysics, Multiscale, Parallel},
+	pages = {101690},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\F9CP4B5Y\\S235271102400061X.html:text/html},
+}
+
+@misc{guennebaud_eigen_2010,
+	title = {Eigen v3},
+	url = {https://eigen.tuxfamily.org/},
+	author = {Guennebaud, Gaël and Jacob, Benoît and others},
+	year = {2010},
+}
+
+@misc{hypre_hypre_2022,
+	title = {hypre: {High} {Performance} {Preconditioners}},
+	url = {https://llnl.gov/casc/hypre},
+	author = {hypre},
+	year = {2022},
 }
