--- a/cnrs-benchmark/moltres.tex
+++ b/cnrs-benchmark/moltres.tex
@@ -21,7 +21,7 @@ analysis.
 
 The
 \texttt{Navier-Stokes} and \texttt{Heat} \texttt{Conduction} modules from
-\gls{MOOSE} provide some of the capabilities for
+\gls{MOOSE} \cite{giudicelli_30_2024} provide some of the capabilities for
 modeling incompressible flow and heat transfer. In particular, I stabilized
 the incompressible flow and temperature governing equations using the
 \gls{SUPG} stabilization method implemented in \gls{MOOSE}
