--- a/lit.tex
+++ b/lit.tex
@@ -200,7 +200,7 @@ frameworks include the commercial COMSOL
 Multiphysics\textsuperscript{\textregistered} software
 \cite{comsol_ab_comsol_nodate}, the aforementioned open-source CFD toolbox
 OpenFOAM, and the open-source finite-element
-framework \gls{MOOSE} \cite{gaston_physics-based_2015}. Researchers at
+framework \gls{MOOSE} \cite{giudicelli_30_2024}. Researchers at
 \gls{PoliMi} developed an \gls{MSR} simulation tool in COMSOL and
 modeled the \gls{MSBR} as a single axisymmetric fuel channel with a uniform
 flow profile \cite{cammi_multi-physics_2011}, followed by the \gls{MSRE} core
