--- a/main.tex
+++ b/main.tex
@@ -135,16 +135,11 @@ nogroupskip=true]
 \label{chap:lit}
 \input{lit}
 \glsresetall
-%
-%\chapter{Description of Moltres and Assessment of its Current Capabilities}
-%\label{chap:moltres}
-%\input{moltres}
-%\glsresetall
 
 \chapter{Verification of Multiphysics Features in Moltres}
 \label{chap:verification}
-\input{verification}
-\glsresetall
+%\input{verification}
+%\glsresetall
 
 \chapter{Hybrid $S_N$-Diffusion Method}
 \label{chap:hybrid}
